Fix sonar issues and verify project (#176)
* Refactor: Improve code quality and fix minor issues

Co-authored-by: bren <bren@juanantonio.info>

* Fix: Use IllegalArgumentException for out-of-bounds set

Co-authored-by: bren <bren@juanantonio.info>

* Refactor WarehouseScaled and fix BFS start point

Co-authored-by: bren <bren@juanantonio.info>

* Refactor: Catch IllegalArgumentException instead of AssertionError

Co-authored-by: bren <bren@juanantonio.info>

---------

Co-authored-by: Cursor Agent <cursoragent@cursor.com>